# FaceTracing

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/louis/facetracing/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/louis/facetracing/: CameraHelper.java  MainActivity.java  Utils.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/louis/facetracing/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
